--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,3 +1,3 @@
 server.port=8000
 message = Hello from Alok!
-spring.cloud.stream.bindings.input=reservations
+#spring.cloud.stream.bindings.input=reservations
