--- a/reservation-service.properties
+++ b/reservation-service.properties
@@ -1,5 +1,5 @@
 server.port=8000
-message = Hello from Alok!
+message = Hello from springboot!!!!!
 #spring.cloud.stream.bindings.input=reservations
 # define the destination to which the input MessageChannel should be bound
 spring.cloud.stream.bindings.input.destination = reservations
